# clx

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  PLAN1.md  PLAN2.md  README.md  cbot.py  demo_backend_call.py  pyproject.toml  requirements.txt  setup.py
cbot/: cbot.py  cbot_cli.py
cbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cbot_cli.egg-info/: PKG-INFO
clx/: __init__.py  __main__.py  core.py  tasks.py
clx/adapters/: __init__.py  duckdb.py  spark.py  sqlite.py
clx_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openspec/: project.md
openspec/changes/remove-pod-actor-routing/: proposal.md  tasks.md
openspec/changes/remove-pod-actor-routing/specs/core/: spec.md
