[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clx-cli"
version = "0.6.0"
description = "A minimal, backend-agnostic AI resolver with SQL adapters."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Roberto L. Delgado", email="roberto@delgadodev.xyz" }
]
license = { text = "MIT" }
keywords = ["ai", "llm", "sql", "spark", "duckdb", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.28.0",
    'tomli>=2.0.1; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/roskideluge/clx"
Repository = "https://github.com/roskideluge/clx"
Issues = "https://github.com/roskideluge/clx/issues"
